--- a/trunk/header.html
+++ b/trunk/header.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>OriginCentury</title>
+<title>Personal Desktop</title>
 <link rel="stylesheet" type="text/css" href="css/common.css" />
 <script type="text/javascript" charset="utf-8" src="js/common.js"></script>
 </head>
