--- a/trunk/test.html
+++ b/trunk/test.html
@@ -1,5 +1,7 @@
-<span class="pageTitle"
-	onclick="with(this.nextSibling){value=this.innerHTML;style.display='block';focus()};this.style.display='none';">Dennis
-	Wang's page</span>
-<input class="pageTitle"
-    onblur="with(this.previousSibling){D.title=innerHTML=this.value?this.value:'Demo';style.display='block';};this.style.display='none'" />
+<html>
+<script type="text/javascript">
+window.onload = function() { alert("sa");}
+</script>
+<body>
+</body>
+</html>
