--- a/trunk/footer.html
+++ b/trunk/footer.html
@@ -1,11 +1,11 @@
-<div id="footer">
-	<div id="information">
-	    <a href="#">About us</a> | <a href="#">Join us</a> | <a href="#">Guide</a>
+    <div id="footer">
+		<div id="information">
+			<hr>
+			<a href="#">About us</a> | <a href="#">Join us</a> | <a href="#">Guide</a><br>
+			&copy; OriginCentury 2011 <a href="http://www.miibeian.gov.cn"
+            target="_blank">京ICP证xxxxx号</a>
+		</div>
 	</div>
-	<div id="footer">&copy; OriginCentury 2011 <a
-		href="http://www.miibeian.gov.cn" target="_blank">京ICP证xxxxx号</a>
-	</div>
-</div>
 </div>
 </body>
 </html>
